# pyfstab

./: .readthedocs.yml  README.rst  pyproject.toml  tox.ini
docs/: conf.py  examples.rst  index.rst  modules.rst  pyfstab.rst  requirements.txt
pyfstab/: __init__.py  entry.py  fstab.py
tests/: context.py  test_fstab.py
