[tool.poetry]
name = "pyfstab"
version = "0.1.0"
description = "Fstab parsing and formatting library"
authors = ["Niko Järvinen <nbjarvinen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.0.1"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
